tests/prhl/fail/0002-skip-2.ec
module M1 = {
  fun f () : unit = { }
}.

module M2 = { 
  fun g () : unit = {
    var x : int;
    x = 2;
  }
}.

lemma foo : equiv [M2.f ~ M1.g : true ==> true].
proof.
  fun.
  skip.